syntax = "proto3";
package api;

message PingMessage {
    string greeting = 1;
}

message HealthMessage {
    string health = 1;
    bool status = 2;
}


service Ping {
    rpc SayHello(PingMessage) returns (PingMessage) {}
}

service Health {
    rpc HealthCheck(HealthMessage) returns (HealthMessage) {}
}

